# nanoAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MCP.md  README.md  README_zh.md  REFACTOR.md  issues.md  loop.md  pyproject.toml  requirements.txt  roadmap.md  tutor.md
.github/workflows/: ci.yml  github-mcp-smoke.yml
docs/: README.md  REFACTOR.md  architecture.md  background-subagent-runtime.md  development-flow.md  development.md  getting-started.md  improvement.md  mcp.md  prompt-architecture.md  security.md
docs/todo/: background-subagent-runtime.md  final-report-quality.md  task-get-large-results.md
nano_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  loop.py  models.py  workspace.py
tests/: analyze_runs.py  conftest.py  run_experiments.py  test_agent_loop.py  test_audit_hook.py  test_background_tasks.py  test_cli.py  test_completion.py  test_console_hook.py  test_context_compactor.py  test_docker_sandbox.py  test_github_mcp_config.py  test_github_mcp_smoke.py  test_hook_pipeline.py  test_imports.py  test_llm_metrics_hook.py  test_llm_registry.py  test_mcp_client.py  test_mcp_config.py  test_mcp_integration.py  test_mcp_providers.py  test_mcp_runtime_manager.py  test_mcp_session.py  test_mcp_stdio_transport.py  test_mcp_tool_adapter.py  test_mcp_tool_registry.py  test_mcp_tools.py  test_memory_update.py  test_openai_compatible.py  test_permissions.py  test_persistence.py  test_prompt_assembly.py  test_rate_limit_hook.py  test_subagents.py  test_tasks.py  test_todo_list.py  test_web_fetch.py  test_web_search.py  test_workspace.py
(+112 files in other folders)
